[package]
name = "clok"
version = "0.1.0"
authors = ["madprops <easywest@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figlet-rs = "0.1.2"
termion = "1.5.3"
chrono = "0.4.9"
clap = "2.33.0"
chan = "0.1.23"
chan-signal = "0.3.3"